Prevent logo from jumping to the left when turning on/off the extension

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,8 @@ body {
 /* Do not delete the ".ytd-popup-container" class to avoid losing
 + the dropdown menu on the top rigth side of the video block */
 
-body.fy-results-page #guide-button,
+body.fy-results-page #guide-icon.ytd-masthead,
+body.fy-watch-page .button.yt-icon-button,
 body.fy-results-page #guide-content,
 body.fy-results-page #buttons.ytd-masthead,
 body.fy-results-page #sub-menu,
@@ -97,7 +98,8 @@ body.fy-results-page .ytd-item-section-renderer {
   margin-right: auto;
 }
 
-body.fy-watch-page #guide-button,
+body.fy-watch-page #guide-icon.ytd-masthead,
+body.fy-watch-page .button.yt-icon-button,
 body.fy-watch-page #guide-content,
 body.fy-watch-page #buttons.ytd-masthead,
 body.fy-watch-page #sub-menu,
@@ -177,6 +179,8 @@ ytd-notification-topbar-button-renderer.notification-button-style-type-default {
 
 input:checked + .slider {
   background-color: #2196F3;
+
+  
 }
 
 input:focus + .slider {
